--- a/_notes/§ Бизнес.md
+++ b/_notes/§ Бизнес.md
@@ -12,10 +12,15 @@ tag: toc
 **- Комплексный.** Эта характеристика означает стремление бизнеса закрыть сразу комплекс потребностей целевой аудитории. Пример с автосалоном: клиент автосалона не только покупает новый автомобиль, но и ремонтирует, покупает запчасти и расходники, хранит шины, оформляет страховку, меняет по trade-in на новый.
 **- Технологичный**. Современные условия рынка не позволят бизнесу отставать в технологическом развитии. Применение последних технологий залог стабильной конкурентоспособности. 
 
+
+  
+Бизнес - это организованная деятельность, направленная на получение прибыли путем предоставления товаров или услуг на рынке. В основе бизнеса лежит коммерческая деятельность, которая строится на обмене ценностями между производителями и потребителями.
+
 ### Избранные мной подходы, модели и концепции управления в текущих проектах
 - [[Регулярный менеджмент]]
 - [[Data-driven подход в маркетинге и менеджменте]]
 - [[Теория Ограничений Систем (ТОС)]]
+- [[Коучинговая ролевая модель управления персоналом]]
 
 ### Связанные темы
 - [[§ Менеджмент]]
