--- a/_notes/§ Маркетинг и клиентские отношения.md
+++ b/_notes/§ Маркетинг и клиентские отношения.md
@@ -17,7 +17,8 @@ tag: moc
 
 
 
-[[Jobs To Be Done (JTBD)]] - теория о поведении покупателя
+- [[Jobs To Be Done (JTBD)]] - теория о поведении покупателя
+- [[Инфотейнмент]]
 
 
 
