--- a/_notes/§ Системное мышление.md
+++ b/_notes/§ Системное мышление.md
@@ -5,6 +5,11 @@ id: § Системное мышление
 tag: toc
 ---
 
+Системное мышление в бизнесе – это подход, основанный на понимании организации или предприятия как сложной системы, взаимодействующей с внешней средой и состоящей из взаимосвязанных элементов. Этот подход призван помочь бизнес-лидерам и менеджерам развивать глубокое понимание организации в целом, а не только ее отдельных частей или процессов.
+
+Этот подход помогает выявлять причинно-следственные связи, анализировать сложные проблемы и предсказывать возможные последствия принимаемых решений. Он способствует развитию системного мышления у руководителей и сотрудников, что позволяет им рассматривать бизнес-процессы в широком контексте и принимать более эффективные стратегические решения.
+
+Системное мышление может применяться для анализа сложных проблем, улучшения [бизнес-процессов](Управление%20бизнес-процессами%20(BPM).md), оптимизации ресурсов, прогнозирования изменений и разработки стратегических планов. Оно способствует осознанному и глубокому подходу к управлению организацией и помогает руководителям решать сложные задачи, учитывая многообразие факторов и взаимосвязей внутри компании и с [внешней средой](Давление%20бизнес-среды%20создает%20хаос%20в%20системе%20бизнеса.md).
 
 - [[Все в системе связанно причинно-следственными связями]]
 - [[Эмерджентность]]
@@ -12,7 +17,9 @@ tag: toc
 - [[Общая Теория Систем]]
 
 
-{в чем разница систменого подхода и системного мышления?}
+---
+- [Что такое системное мышление](https://system-school.ru/what_is)
+- 
 
 
 
