--- a/_notes/§ Системный подход.md
+++ b/_notes/§ Системный подход.md
@@ -9,7 +9,17 @@ tag: moc
 
 
 > Руководители сталкиваются не с независимыми друг от друга проблемами, а с непрерывно развивающимися ситуациями, которые состоят из сложной совокупности изменяющихся проблем, влияющих друг на друга. Я называю такие ситуации беспорядочными… Руководители не решают проблемы, они управляют беспорядком.
-Рассел Акофф, специалист в области управления
+   Рассел Акофф, специалист в области управления
 
-Если понять структуру и принципы работы системы, можно эффективно управлять этой работой.
+Если понять структуру и принципы работы системы, можно эффективно управлять этой работой. Это понимание и является результатом использования системного подхода
 
+---
+
+Системный подход - это методология, основанная на идее о том, что системы состоят из взаимосвязанных элементов, и их свойства и поведение могут быть поняты только при рассмотрении системы в целом. Принципы системного подхода описывают основные концепции и подходы, используемые при применении системного подхода
+
+1. Глобальное мышление. Принцип глобального мышления предполагает рассмотрение системы в целом и учет всех ее элементов, связей и взаимодействий. Вместо изолированного рассмотрения отдельных компонентов, системный подход позволяет понять и управлять системой в ее полноте и комплексности.
+2. Взаимодействия и связи. Системный подход уделяет особое внимание взаимодействиям и связям между элементами системы. Он признает, что изменение одного элемента может иметь влияние на другие элементы и на систему в целом. Понимание этих связей помогает прогнозировать и управлять поведением системы.
+3. Иерархия и организация. Системы могут иметь иерархическую структуру, состоящую из подсистем и компонентов, которые взаимодействуют друг с другом. Принцип иерархии подразумевает анализ и учет разных уровней системы, их взаимодействия и зависимости, чтобы понять ее функционирование и структуру.
+4. Обратная связь и обучение. Принцип обратной связи описывает взаимодействие между системой и ее окружением. Обратная связь предоставляет информацию о состоянии системы, ее результативности и позволяет системе адаптироваться и улучшаться. Это позволяет системе быть более гибкой и способной к саморегулированию.
+5. [Эмерджентность](Эмерджентность.md). Принцип эмерджентности подразумевает, что система может проявлять новые свойства и поведение, которые не могут быть объяснены путем простого анализа ее составляющих частей. Возникающие свойства системы являются результатом взаимодействия и синергии между ее элементами.
+6. Целостность и целевое направление. Системный подход стремится к пониманию целостности системы и ее целевого направления. Целостность означает рассмотрение системы в ее полноте, учет всех ее компонентов и взаимосвязей. Целевое направление указывает на ориентацию системы на достижение определенных целей или решение конкретных задач
