--- a/_notes/Визуальное мышление.md
+++ b/_notes/Визуальное мышление.md
@@ -23,9 +23,16 @@ tag: moc
 
 Применительно к бизнес-среде, визуальное мышление - один из основных каналов взаимодействия бизнеса с целевой аудиторией, посредством визуальной рекламы, визуального контента.
 
+Не меньше визуальное мышление используется и во внутренних бизнес-коммуникациях. В связях между структурными единицами и различными уровнями организации
+
 Прикладным методом использования ВМ является [[Визуализация данных]]
 
-
+Варианты использования ВМ в бизнесе:
+1. Диаграммы и схемы. Визуальные диаграммы и схемы помогают представить структуру организации, [бизнес-процессы](Управление%20бизнес-процессами%20(BPM).md), поток информации и взаимосвязи между различными элементами. Они помогают сотрудникам лучше понять и запомнить сложные концепции, а также облегчают обучение новых сотрудников.
+2. [Интеллект-карты. Mind Map](Интеллект-карты.%20Mind%20Map.md). ИК являются мощным инструментом для организации и визуализации идей, информации и концепций. Они позволяют связать различные элементы в единое целое, показать иерархию и взаимосвязи между ними. Можно использовать для планирования проектов, разработки стратегий, принятия решений и генерации новых идей.
+3. Инфографика. Инфографика объединяет текст, графику и визуальные элементы для передачи сложной информации в простой и понятной форме. Они используются для визуализации данных, статистики, исследований и фактов, делая их более увлекательными и доступными для аудитории.
+4. Прототипы и дизайн. Визуальное мышление применяется в создании прототипов и дизайна продуктов и услуг. Оно позволяет командам и клиентам лучше представить, как будет выглядеть и функционировать конечный продукт, и вносить необходимые изменения и улучшения.
+5. Запись заседаний и встреч. Визуальное мышление можно использовать для ведения записей заседаний и встреч. Визуальные заметки, изображения и диаграммы позволяют уловить основные идеи, дискуссии и принятые решения, а также облегчают коммуникацию и понимание сотрудниками.
 
 ---
 - [Когнитивная психология: теория дуального процесса мышления](https://lpgenerator.ru/blog/2015/08/07/kognitivnaya-psihologiya-teoriya-dualnogo-processa-myshleniya/)
