--- a/_notes/Визуальные заметки. Visual Note-taking (VNT).md
+++ b/_notes/Визуальные заметки. Visual Note-taking (VNT).md
@@ -17,20 +17,40 @@ tag: tree
 
 ### Структурные единицы визуальных заметок
 - Макет
+- Модуль
+- Сообщение
+- Связь
 
 ### Два подхода к VNT
 Сам процесс и цель визуальных заметок имеют два основных направления: 
 - Визуальное конспектирование, фиксирование последовательного потока информации при прослушивании лекции, выступления, аудиокниги
 - Визуальное конструирование, обработка уже имеющегося объема информации, формирование структуры и связей между блоками
-
-Техника близкая к VNT
+- 
+### Техника близкая к VNT
 [[Опорный конспект по системе В.Шаталова]]
-
 
 ### Заметки 
 - [[Как работают прикладные методы визуального мышления]]
 - [[Интеллект-карты. Mind Map]]
 
+### Как вести визуальные заметки
+Ведение визуальных заметок - это отличный способ организовать свои мысли и информацию с помощью изображений, рисунков и символов. Вот несколько советов по ведению визуальных заметок:
+
+1. **Используйте ключевые слова и символы.** Стремитесь к простоте и краткости в своих заметках. Используйте ключевые слова или фразы, которые наиболее точно передают суть того, что вы хотите запомнить или изобразить. Также можно использовать символы и иконки, которые быстро и наглядно передают определенные понятия или идеи.
+2. **Рисуйте простые и понятные изображения.** Не нужно быть художником, чтобы делать визуальные заметки. Изображения должны быть простыми и понятными. Используйте базовые формы, линии и стрелки, чтобы создавать диаграммы, схемы или простые иллюстрации. Вы можете использовать цвета, чтобы выделить определенные элементы или добавить визуальное разнообразие.
+3. **Используйте структуру и организацию**. Как и при создании текстовых заметок, визуальные заметки могут быть организованы в виде списка, диаграммы, паутины и других структур. Располагайте свои идеи и информацию логически, устанавливайте связи и взаимосвязи между ними. Вы можете использовать стрелки, линии и различные маркеры для указания связей и направлений.
+4. **Будьте креативными. Визуальные заметки** - это ваш инструмент для организации мыслей, поэтому не бойтесь быть креативными и экспериментировать с различными стилями и техниками. Вы можете использовать шрифты разных размеров, тени, закрашивание и другие эффекты, чтобы подчеркнуть важные элементы или создать визуальный акцент.
+5. **Практикуйтесь регулярно**. Чем больше вы будете практиковаться, тем лучше станете в ведении визуальных заметок. Выделите время на регулярную практику и тренируйте свои навыки. Постепенно вы будете развивать свой уникальный стиль и эффективность в ведении визуальных заметок.
+
+### Посты для воркшопа по VNT
+- [[Организационные вопросы по воркшопу]]
+- [[День 1. Определяем цели и ценности ведения визуальных заметок]]
+- [[День 2. Типы и подходы в визуальных заметках]]
+- [[День 3. Инструменты для ведения визуальных заметок]]
+- [[День 4. Практика]]
+- [[День 5. Препятствия и их преодоление]]
+- [[День 6. Выполняем практическую задачу с помощью VNT]]
+- [[День 7. Подводим итоги]]
 
 
 
