--- a/_notes/Жить другой жизнью.md
+++ b/_notes/Жить другой жизнью.md
@@ -9,4 +9,4 @@ tag: seed
 
 Быть другим значит мыслить по другому. От мыслей идут ощущения, а значит и чувствовать по другому. И уже из мыслей и ощущений родятся правильные и нужные действия.
 
-Более того, действия могут остаться и старыми, но изменится их качество, их восприятие. Не нужно делать что-то особенное новое для изменения, можно делать то же что и ранее, но по-особенному и по-новому
+Более того, действия могут остаться и старыми, но [изменится](Изменения.md) их качество, их восприятие. Не нужно делать что-то особенное новое для изменения, можно делать то же что и ранее, но по-особенному и по-новому
