--- a/_notes/Изменения - это обучение.md
+++ b/_notes/Изменения - это обучение.md
@@ -5,3 +5,5 @@ id: Избранные заметки
 tag: seed, изменения, обучение
 ---
 Всякий новый образ действий и мыслей есть изменение нейронной структуры мозга
+
+Обучение играет значительную роль в нашей способности адаптироваться к изменяющемуся миру и вносить активные изменения в свою жизнь и окружающую среду.
