--- a/_notes/Интеллект-карты. Mind Map.md
+++ b/_notes/Интеллект-карты. Mind Map.md
@@ -9,3 +9,11 @@ tag: seed
 Интеллект-карты — инструмент фокусируется на отношениях и иерархии, поэтому он идеально подходит для упрощения сложных идей. 
 
 Интеллект-карта связывает информацию вокруг центральной идеи или темы. В нем есть подтемы, ответвляющиеся от центральной идеи, раскрывающие более подробную информацию о предмете и их взаимосвязи
+
+Алгоритм составления интеллект-карты
+
+1. Определить тему. 
+2. Написать центральную мысль
+3. Добавить ветви: 
+5. Использовать ключевые слова и изображения
+6. Создать связи
