--- a/_notes/Как мы думаем.md
+++ b/_notes/Как мы думаем.md
@@ -6,3 +6,11 @@ tag: moc
 ---
 
 Каковы основные механизмы нашего мышления на физиологическом и логическом уровне
+
+Трудная проблема сознания — это проблема того, как физические процессы в мозге вызывают субъективные переживания.
+
+>Трудная проблема — это проблема того, как все эти процессы вызывают субъективные переживания. Примечательно, что это не проблема объективных механизмов, как, например, поведение, которое управляется мозгом. Можно рассказать полную историю об объективных механизмах в мозге, зажигающихся нейронах, поведении и объяснении всех этих функций: бодрствования, чувствительности, распознавания, наблюдения. И все же остается вопрос: почему все это ассоциируется с субъективным переживанием?
+
+___
+- [The Hard Problem of Consciousness - Serious Science](https://serious-science.org/the-hard-problem-of-consciousness-6131)
+- 
