--- a/_notes/Мнемотехника.md
+++ b/_notes/Мнемотехника.md
@@ -7,6 +7,15 @@ tag: moc
 
 Мнемотехника - совокупность специальных приёмов и способов, облегчающих [запоминание](https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%BF%D0%BE%D0%BC%D0%B8%D0%BD%D0%B0%D0%BD%D0%B8%D0%B5 "Запоминание") нужной информации и увеличивающих объём памяти путём образования [ассоциаций](https://ru.wikipedia.org/wiki/%D0%90%D1%81%D1%81%D0%BE%D1%86%D0%B8%D0%B0%D1%86%D0%B8%D1%8F_(%D0%BF%D1%81%D0%B8%D1%85%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F) "Ассоциация (психология)") (связей): замена абстрактных объектов и фактов на понятия и представления, имеющие визуальное аудиальное или кинестетическое представление, связывание объектов с уже имеющейся в памяти информацией, различные модификации для упрощения запоминания
 
+Мнемотехника - это набор методов и стратегий, которые помогают запоминать и восстанавливать информацию. Вот некоторые основные принципы мнемотехники:
+
+1. **Ассоциации**. Один из основных принципов мнемотехники заключается в создании ассоциаций между новой информацией и уже известными предметами, местами, образами или идеями. Это позволяет установить связь между новой информацией и существующими знаниями, что делает запоминание более эффективным.
+2. **Визуализация**. Визуализация является мощным инструментом в мнемотехнике. Она позволяет представить информацию в виде наглядных образов, картинок или сценариев, что облегчает ее запоминание. Визуализация может включать создание ярких и живых образов в уме или использование реальных объектов и изображений.
+3. **Ритуалы и места**. Использование ритуалов и мест (метод места) помогает организовать информацию в систематическом порядке. Этот принцип основан на использовании знакомых мест или пути и связывании информации с определенными точками на этом пути. Это помогает при воспоминании, когда можно пройтись по пути и восстановить информацию.
+4. **Рифмы и песни**. Рифмы и песни - это простой и запоминающийся способ запоминания информации. Ритм и мелодия помогают укрепить в памяти определенные фразы, идеи или списки. Часто такой подход используется для запоминания важных данных, например, при изучении иностранных языков или формул.
+5. **Активное повторение и повторение во времени**. Один из ключевых принципов мнемотехники заключается в активном повторении информации. Повторение помогает закрепить информацию в памяти и улучшить ее восстановление. Также эффективным является повторение во времени - повторение информации через определенные интервалы времени для укрепления запоминания.
+6. **Эмоциональное вовлечение.** Эмоциональное вовлечение помогает усилить запоминание. Когда информация вызывает эмоциональные реакции, она оказывается более запоминающейся. Попытайтесь связать информацию с эмоционально значимыми событиями, образами или историями, чтобы повысить ее запоминающую способность.
+
 ---
 [Память — Википедия](https://ru.wikipedia.org/wiki/%D0%9F%D0%B0%D0%BC%D1%8F%D1%82%D1%8C)
 
