--- a/_notes/Муда - потери, действия не создающие ценности.md
+++ b/_notes/Муда - потери, действия не создающие ценности.md
@@ -7,4 +7,4 @@ tag: seed
 
 В философии бережлиого производства Муда - это действия не приносящие ценности, а только тратящие ресурсы. 
 
-В центре любого бизнес-процесса стоит понятие ценности. Любой процесс должен ценность производить, затрачивая минимум ресурсов. Это и есть эффективность
+В центре любого [бизнес-процесса](Управление%20бизнес-процессами%20(BPM).md) стоит понятие [ценности](Ключевой%20процесс%20создания%20ценности.md). Любой процесс должен ценность производить, затрачивая минимум ресурсов. Это и есть эффективность
