--- a/_notes/Принципы визуального восприятия. Гештальт.md
+++ b/_notes/Принципы визуального восприятия. Гештальт.md
@@ -19,7 +19,7 @@ tag: tree
 Мы группируем вместе вещи, которые представляются нам похожими. Также мы склонны думать, что эти вещи/объекты несут схожие функции
 Человеческий глаз склонен воспринимать сходные элементы дизайна как целостную картину, форму или группу, даже если эти элементы разделены.
 
-**Фигура-фон**
+[[Фигура-фон]]
 Принцип гласит, что люди инстинктивно разделяют объекты переднего и заднего планов изображения. То есть, внимание фокусируется либо на объектах переднего плана (рисунок), либо на заднем плане (фон)
 
 **Общая область**
