--- a/_notes/Прогнозирование в бизнесе.md
+++ b/_notes/Прогнозирование в бизнесе.md
@@ -6,12 +6,17 @@ tag: seed
 date: 11.05.2023
 ---
 
-Прогнозирование - предсказание будущего на основе данных и знаний, полученных в прошлом
+Прогнозирование - предсказание будущего на основе [данных](Data-driven%20подход%20в%20маркетинге%20и%20менеджменте.md) и знаний, полученных в прошлом
 
-Ошибка полагать на однозначные точные цифры прогноза. Для принятия эффективных решений необходимо оперировать не значеними, а диапазоном значений
+Ошибка полагать на однозначные точные цифры прогноза. Для принятия эффективных решений необходимо оперировать не значениями, а диапазоном значений
 
 При использовании прогнозов обычно делают две основные ошибки:
 1.  Использование однозначных прогнозов.
 2.  Использование неверного горизонта прогнозирования или уровня детализации
 
 Для определения прогнозного диапазона можно использовать математические алгоритмы. Математический алгоритм может использоваться для создания требуемого диапазона, но необходимо определить параметры, определяющие диапазон, в основном вероятность того, что фактическое значение попадет в этот диапазон
+
+Один из математических подходов - [[Метод шести сигм]]
+
+---
+- [Предсказательная аналитика](Предсказательная%20аналитика.md)
