--- a/_notes/Регулярный менеджмент.md
+++ b/_notes/Регулярный менеджмент.md
@@ -6,7 +6,18 @@ tag: seed
 date: 18.05.2023
 ---
 
-### Концепции ролевого поведения руководителей
+**Регулярный менеджмент** - это подход к управлению, который акцентирует внимание на постоянном и систематическом наблюдении, контроле и улучшении процессов и результатов работы. Он предполагает регулярное и целенаправленное применение методов управления для достижения поставленных целей и обеспечения эффективной работы организации.
+
+Основные принципы регулярного менеджмента включают:
+
+1. Мониторинг и измерение. Регулярный менеджмент предполагает постоянный мониторинг и измерение процессов и результатов работы. Это позволяет получить объективные данные о производительности, качестве и других ключевых показателях, чтобы оценить текущее состояние и выявить потенциальные проблемы.
+2. Анализ и оценка. Полученные данные подвергаются анализу и оценке для выявления причинных связей, трендов и паттернов. Это помогает определить, что работает хорошо и что требует улучшения. Анализ может осуществляться с использованием различных инструментов и методов, включая статистический анализ, SWOT-анализ, анализ причин и следствий и т.д.
+3. Планирование и целеполагание. На основе результатов анализа разрабатываются планы действий и устанавливаются цели для улучшения процессов и достижения желаемых результатов. Цели должны быть конкретными, измеримыми, достижимыми, релевантными и ограниченными по времени (SMART-цели).
+4. Регулярные проверки и ревизии. Регулярный менеджмент подразумевает проведение регулярных проверок и ревизий выполнения плановых действий и достижения целей. Это позволяет отслеживать прогресс, выявлять проблемы и корректировать планы при необходимости.
+5. Непрерывное улучшение. Регулярный менеджмент направлен на непрерывное улучшение процессов, методов работы и результатов. Он стимулирует поиск новых и более эффективных способов выполнения задач, применение лучших практик и инноваций, а также обеспечивает гибкость и адаптивность к изменениям внешней среды ([Цикл PDCA](Цикл%20PDCA.md))
+
+
+### Концепции ролевого поведения руководителей в регулярном менеджменте ([Коучинговая ролевая модель управления персоналом](Коучинговая%20ролевая%20модель%20управления%20персоналом.md))
 
 Г. Юкл описал девятнадцать измерений, описывающих управленческую деятельность:
 
