--- a/_notes/Теория Ограничений Систем (ТОС).md
+++ b/_notes/Теория Ограничений Систем (ТОС).md
@@ -5,7 +5,20 @@ id: Теория Ограничений Систем (ТОС)
 tag: moc
 ---
 
-**Принципы ТОС:**
+Теория ограничений систем (Theory of Constraints, TOC) - это методология управления и улучшения производственных и бизнес-процессов, разработанная Эли Голдраттом в 1980-х годах. Основной принцип TOC заключается в том, что каждая система имеет свое узкое место, называемое "ограничением", которое ограничивает ее общую производительность и эффективность.
+
+Основные принципы теории ограничений систем включают:
+
+### Определение ограничений
+TOC признает, что в любой [системе](§%20Системный%20подход.md) есть по крайней мере одно узкое место, которое ограничивает ее возможности. Определение и понимание этих ограничений является первым шагом в управлении их влиянием на общую систему.
+### Эксплуатация ограничений
+TOC предлагает максимальное использование ограничений системы. Это означает, что все ресурсы и усилия должны быть сосредоточены на поддержке работы [ограничения](Виды%20ограничений%20в%20ТОС.md), чтобы обеспечить его максимальную производительность и эффективность.
+### Подчинение всех ресурсов системы интересам ограничения
+Вся деятельность системы должна быть ориентирована на обеспечение потока материалов и информации к ограничению, так как это определяет общую производительность системы. [Ненужные операции и задачи](Муда%20-%20потери,%20действия%20не%20создающие%20ценности.md), которые мешают потоку к ограничению, должны быть минимизированы.
+### Постоянное улучшение - [[Цикл PDCA]]
+TOC нацелена на постоянное улучшение системы, основываясь на непрерывном изучении и оптимизации ограничений. Это достигается через цикл улучшений, известный как "Plan-Do-Check-Act" (Планирование-Действие-Проверка-Корректировка), который включает в себя определение целей, реализацию изменений, оценку результатов и внесение корректировок.
+
+## Принципы ТОС:
 - [[Все в системе связанно причинно-следственными связями]]
 - [[Локальные улучшения не означают улучшения всей системы]]
 - [[Производительность всей системы диктуется производительностью ограничения]]
