--- a/_notes/Три функции эффективного коммерческого сообщения.md
+++ b/_notes/Три функции эффективного коммерческого сообщения.md
@@ -4,17 +4,14 @@ title: Три функции эффективного коммерческого
 id: Три функции эффективного коммерческого сообщения
 tag: seed
 ---
-
-- Убедить и побудить
-- Научить
-- Объяснить или рассказать
-
+## Определения ЭКП
 [[Эффективные коммуникации в бизнес-среде|Коммерческим сообщением]], здесь и далее, называется сообщение как единица коммуникаций применительно к бизнес среде, в рекламе и маркетинге, бизнес-планировании, обучении и работе с персоналом (HR)
 
 Как и всякое сообщение оно достигает получателя двумя путями, согласно [[Модель вероятности осознанной обработки информации (ELM)]], центральным, основным и периферийным. Таким образом, работа коммерческого сообщения происходит в самом сознании получателя. Это важно учитывать при [[Этапы создания эффективного коммерческого сообщения|проектировании коммерческого сообщения]]
 
 Суть дизайна, как дисциплины и деятельности, и состоит в проектировании восприятия и реакции потребителя дизайна. [[Дизайн - это инженерная дисциплина]]
 
+## Функции ЭКП
 ### 1. Убедить
 Первая задача эффективного коммерческого сообщения - убедить получателя и побудить его совершить целевое действие
 ### 2. Научить
@@ -25,3 +22,21 @@ tag: seed
 Обьяснить какое-либо явление
 
 ![](../assets/Pasted%20image%2020230528214440.png)
+
+## Алгоритм разработки ЭКП
+
+1. Целевая аудитория: Определить свою целевую аудиторию и адаптировать своё сообщение к её потребностям, интересам и предпочтениям. Учитывая их демографические характеристики, поведенческие особенности и мотивации.
+
+2. Ясность: Использовать ясный и простой язык, чтобы избежать недоразумений. Избегать сложных терминов, аббревиатур и неясных формулировок. Предоставить информацию, которая легко воспринимается и понимается вашей целевой аудиторией. 
+
+3. Уникальное предложение: Выделить основные преимущества продукта или услуги и показать, как они отличают меня от конкурентов. Сосредоточиться на том, что делает мое предложение уникальным и ценным для потребителей.
+
+4. Привлекательность: Использовать убедительные заголовки, привлекательные изображения, чтобы привлечь внимание и вызвать интерес у аудитории. Сделать сообщение запоминающимся.
+
+5. Выгода для клиента: Подчеркнуть преимущества и выгоды, которые мой продукт или услуга предлагает клиентам. Уделить внимание тому, как они могут решить проблемы, удовлетворить потребности или улучшить свою жизнь благодаря моему предложению.
+
+6. Доверие: Включить в ЭКП социальные доказательства, отзывы клиентов, рекомендации или сертификации, чтобы укрепить доверие к моему бренду и подтвердить качество предложения.
+
+7. Вызов к действию: Включить ясный и убедительный призыв к действию, чтобы побудить потребителей совершить желаемое действие, такое как покупка продукта, регистрация или запрос дополнительной информации.
+
+8. Персонализация: Стараться персонализировать коммерческое сообщение
