--- a/_notes/§ Маркетинг и клиентские отношения.md
+++ b/_notes/§ Маркетинг и клиентские отношения.md
@@ -41,5 +41,4 @@ ___
 - [Артем Азевич, руководитель трекинга ФРИИ: как ABCDX-сегментация помогает увеличить выручку стартапов](https://www.youtube.com/watch?v=cvDoyChlaCo)
 - [Социальное доказательство - Фёдоров](https://fdrv.me/socialnoe-dokazatelstvo/)
 - [Топ лучших выводов из книг по маркетингу и продажам](https://knigli.ru/marketing-i-prodazhi/)
-- - [Что такое онбординг — как вовлечь пользователя и превратить в клиента | Unisender](https://www.unisender.com/ru/glossary/onboarding/)
-- 
+- [Что такое онбординг — как вовлечь пользователя и превратить в клиента | Unisender](https://www.unisender.com/ru/glossary/onboarding/)
