--- a/_notes/Организационные вопросы по воркшопу.md
+++ b/_notes/Организационные вопросы по воркшопу.md
@@ -6,7 +6,29 @@ tag: seed
 date: 02.06.2023
 ---
 
+Идея провести недельный интенсив по визуальным заметкам возникла в обсуждении на форуме [Тематические недели. Как их можно организовать? - Общие темы - Zettelkasten | Умные заметки | Базы знаний](https://zttl.space/t/tematicheskie-nedeli-kak-ih-mozhno-organizovat/1980/5?u=ruslankozik)
 
+Заранее стоит оговорить, что этот формат новый и для сообщества и для меня самого, поэтому методология и идеология данного мероприятия будет рождаться уже в процессе. Благо, тема визуальных заметок обширная и интересная, а у меня есть опыт использования визуальных средств работы с информацией в самых разных областях
 
+Как технически я вижу проведение такой тематической неделе/воркшопа: на протяжении недели, в этой теме я публикую теоретические выкладки, большей частью из своего цифрового сада. Сразу же предлагаю практические упражнения, а участники оставляют обратную связь по использованию данного. Стартуем в понедельник 5 июня 2023 г.
 
+Примерный план пока такой:
+- [[Организационные вопросы по воркшопу]]
+- [[День 1. Определяем цели и ценности ведения визуальных заметок]]
+- [[День 2. Типы и подходы в визуальных заметках]]
+- [[День 3. Инструменты для ведения визуальных заметок]]
+- [[День 4. Практика]]
+- [[День 5. Препятствия и их преодоление]]
+- [[День 6. Выполняем практическую задачу с помощью VNT]]
+- [[День 7. Подводим итоги]]
+
+Но на то он и "примерный", потому что скорее всего, будет корректироваться по ходу дела, поэтому следите за новостями
+
+И последнее, для тех кого нет на форуме или кому такой формат в принципе неудобен обсуждения предлагаю вести также в тг группе Визуальные заметки https://t.me/visualnt Туда же буду и дублировать теоретические материалы
+
+Пожалуйста, кто прочитал это сообщение, оставьте обратную связь, чтобы я мог сразу скорректировать план:
+- Как вам идея в целом?
+- Насколько интересна вам тема визуальных заметок (ВЗ)?
+- Видите ли вы практическую ценность в прокачке навыков визуального мышления и ведения ВЗ?
+- Какие есть предложения и пожелания по проведению воркшопа?
 
