--- a/_notes/Изменения - это обучение.md
+++ b/_notes/Изменения - это обучение.md
@@ -1,7 +1,7 @@
 ---
 layout: note
-title: Избранные заметки
-id: Избранные заметки
+title: Изменения - это обучение
+id: Изменения - это обучение
 tag: seed, изменения, обучение
 ---
 Всякий новый образ действий и мыслей есть изменение нейронной структуры мозга
