--- a/_notes/Как мы думаем.md
+++ b/_notes/Как мы думаем.md
@@ -2,7 +2,8 @@
 layout: note
 title: Как мы думаем
 id: Как мы думаем
-tag: moc
+tags:
+  - seed
 ---
 
 Каковы основные механизмы нашего мышления на физиологическом и логическом уровне
@@ -11,6 +12,13 @@ tag: moc
 
 >Трудная проблема — это проблема того, как все эти процессы вызывают субъективные переживания. Примечательно, что это не проблема объективных механизмов, как, например, поведение, которое управляется мозгом. Можно рассказать полную историю об объективных механизмах в мозге, зажигающихся нейронах, поведении и объяснении всех этих функций: бодрствования, чувствительности, распознавания, наблюдения. И все же остается вопрос: почему все это ассоциируется с субъективным переживанием?
 
-___
-- [The Hard Problem of Consciousness - Serious Science](https://serious-science.org/the-hard-problem-of-consciousness-6131)
-- 
+
+---
+#### Контекст и связанные заметки
+- .Родительские заметки:
+	- [[Цифровой сад]]
+- Дочерние заметки:
+	- 1
+---
+#### Источники и ссылки
+- .[The Hard Problem of Consciousness - Serious Science](https://serious-science.org/the-hard-problem-of-consciousness-6131)
