--- a/_notes/Публичная работа.md
+++ b/_notes/Публичная работа.md
@@ -4,15 +4,19 @@ title: Публичная работа
 id: Публичная работа
 tag: seed
 ---
-
-
-
 Работать публично, или как сказал Энди Матушак "работать с открытой дверью мастерской"([Work with the garage door up](https://notes.andymatuschak.org/z21cgR9K3UcQ5a7yPsj2RUim3oM2TzdBByZu)) означает делиться не только результатом творчества, а самим своим творческим процессом и проблемами с широкой аудиторией.
 
 Такая форма открытости формирует особое настроение творческого процесса: с одной стороны это накладывает определенную ответственность за тщательность работы, с другой стороны формирует ощущение единения творца со своим зрителем
 
 
 ---
-Источники:
+#### Контекст и связанные заметки
+- .Родительские заметки:
+	- [[Цифровой сад]]
+- Дочерние заметки:
+	- {empty}
+---
+#### Источники и ссылки
 - [The case for sharing your work in public](https://nesslabs.com/work-in-public)
 - [Andy Matushak: Work with the garage door up](https://notes.andymatuschak.org/z21cgR9K3UcQ5a7yPsj2RUim3oM2TzdBByZu)
+
